--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     
     <groupId>com.example</groupId>
     <artifactId>MyJavaApp</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -27,7 +27,16 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    
+    <distributionManagement>
+	    <snapshotRepository>
+		    <id>nexus</id>
+		    <url>http://57.155.113.102:8081/repository/MyJavaApp_with_pom</url>
+	    </snapshotRepository>
+	    <repository>
+		    <id>nexus</id>
+		    <url>http://57.155.113.102:8081/repository/App</url>
+	    </repository>
+    </distributionManagement>
     <build>
         <plugins>
             <plugin>
