--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
     </dependency>
     <dependency>
         <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-tomcat</artifactId>
+	<artifactId>spring-boot-starter-tomcat</artifactId>
+	<version>3.1.4</version>
         <scope>provided</scope> <!-- Tomcat is provided by the server -->
     </dependency>
         <dependency>
